src/app.css
:root {
    --bg-dim: #1e2326;
    --bg0: #272e33;
    --bg1: #2e383c;
    --bg2: #374145;
    --bg3: #414b50;
    --bg4: #495156;
    --bg5: #4f5b58;
    --gray0: #7a8478;
    --gray1: #859289;
    --gray2: #9da9a0;
    --fg: #d3c6aa;
    --red: #e67e80;
    --yellow: #ddae21;
    --green: #74c365;
    --blue: #7fbbb3;
    --orange: #e89068;
    --bg-yellow: #45443c;
    --bg-green: #3c4841;
    scrollbar-color: var(--gray0) var(--bg3);
    margin: 0;
    background: var(--bg-dim);
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    font-family: "JetBrains Mono Variable", monospace;
    color: #fff;
}

h1,
h2 {
    font-weight: 500;
}

h1 {
    font-size: 50px;
    letter-spacing: -1.68px;
    margin: 0;
    @media (max-width: 1024px) {
        font-size: 36px;
    }
}

h2 {
    font-size: 24px;
    line-height: 118%;
    letter-spacing: -0.24px;
    margin: 0 0 0.5em;
    @media (max-width: 1024px) {
        font-size: 20px;
    }
}

p {
    margin: 0;
}

code {
    font-size: 15px;
    line-height: 135%;
    padding: 4px 8px;
    background: var(--code-bg);
}

#app {
    text-align: center;
    min-height: 100svh;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
}

.flex-row {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.margin-1 {
    margin: 1em;
}

.margin-05 {
    margin: 0.5em;
}

a {
    color: var(--blue);
}

ul {
    margin: 0;
}

